Fix: Fix the reporting of the total notifications.